compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__unreachable_string_pattern_after_prefix.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let string = \"\"\n  case string {\n    \"wib\" <> rest -> rest\n    \"wibble\" -> \"a\"\n    _ -> \"b\"\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let string = ""
  case string {
    "wib" <> rest -> rest
    "wibble" -> "a"
    _ -> "b"
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:5:5
  │
5 │     "wibble" -> "a"
  │     ^^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
